public static class HashStrings 
{
    public static readonly string Player = "Player";
    public static readonly string Wall = "Wall";
    public static readonly string Movement = "Movement";

    public static readonly string Die = "Die";
    public static readonly string StartReload = "StartReload";
    public static readonly string Reloading = "Reloading";
    public static readonly string Jump = "Jump";
    public static readonly string Land = "Land";
    public static readonly string Crouch = "Crouch";
    public static readonly string Run = "Run";
    public static readonly string Walk = "Walk";

    public static readonly string Speed = "Speed";

    public static readonly string Aim = "Aim";
}
